# K8s-OffHours

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.MD  SECURITY.md  index.yaml  pyproject.toml  requirements.txt
.github/: MAINTAINER_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  helm-release.yml
docs/: README.md  architecture.md  argocd-offhours-user.md  configuration.md  cost-optimization.md  deploy.md  engine-python.md  operations.md  scenarios.md
engine/: offhours.py
engine/offhours_core/: __init__.py  settings.py
helm/k8s-offhours/: Chart.yaml  README.md  values.yaml
helm/k8s-offhours/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjobs.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml
k8s/base/: config.yaml  cronjob-shutdown.yaml  cronjob-startup.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
k8s/base/multi-window/: config-dev-weekday.yaml  config-qa-weekday.yaml  cronjob-shutdown-dev-weekday.yaml  cronjob-shutdown-qa-weekday.yaml  cronjob-startup-dev-weekday.yaml  cronjob-startup-qa-weekday.yaml  kustomization.yaml
k8s/examples/argo/: argocd-application-scenario-3.yaml  argocd-application-scenario-4.yaml
k8s/examples/scenarios/: hpa-example.yaml  hpa-scenario-2-checkout-api.yaml  scenario-1-namespace-scope.yaml  scenario-2-deployment-scope.yaml  scenario-3-argopp-override.yaml  scenario-4-mixed-protected-app.yaml
scripts/: offhours.py
tests/: test_offhours.py
