[project]
name = "k8s-offhours"
version = "0.1.0"
description = "Safe and GitOps-friendly off-hours scaling toolkit for Kubernetes workloads"
readme = "README.MD"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
